# jpeg-date-renamer

./: .gitignore  README.md
haskell/: reader.hi  reader.hs
python_jpeg_date_renamer/: pyproject.toml
python_jpeg_date_renamer/src/: __init__.py  main.py
python_jpeg_date_renamer/unit_tests/: test_jpeg_date_renamer.py
rust_jpeg_date_renamer/: Cargo.toml
rust_jpeg_date_renamer/src/: endian.rs  main.rs
