[tool.poetry]
name = "python-jpeg-date-renamer"
version = "0.1.0"
description = ""
authors = ["Isaac-Peterson_mottmac <isaac.peterson@mottmac.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
exif = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"